<resources>
    <string name="app_name">Rate Haus</string>
    <string name="tu_ilmenau">TU Ilmenau</string>
    <string name="uni_erfurt">University of Erfurt</string>
    <string name="post_Review">Post a Review</string>
    <string name="ratingbar_head">How is your experience with your Haus Facilities and environment</string>
    <string name="ratingbar_experienceText">Awesome. I love it</string>
    <string name="review_mainText">Tell us what you loved</string>
    <string name="btn_reviewPost">Send feedback</string>
    <string name="back_to_reviews">Back to Reviews</string>
    <string name="studierendenwerk">Studierendenwerk Hauses</string>
    <string name="select_haus">Select Haus</string>
    <string name="my_experience_was_awesome_living_in_this_house">My experience was awesome living in this house.</string>
    <string name="anonymous">Anonymous</string>
    <string name="strfeedback">Give your valuable feedbacks to help other students to find there best accomodation</string>
    <string name="strtips">Get useful tips from Seniors and residents who lived in those hauses</string>
</resources>