<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".PostReviewScreen">

    <LinearLayout
        android:id="@+id/RatingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/ratingbar_head"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:numStars="5"
        android:rating="5"/>

    <TextView
        android:id="@+id/txtviewRatingScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ratingbar_experienceText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/etFeedback"
        android:lines="5"
        android:hint="@string/review_mainText"
        android:gravity="top"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateFilterContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_haus"
            app:startIconDrawable="@drawable/ic_house">

            <AutoCompleteTextView
                android:id="@+id/datesFilterSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:text="All Time" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmitReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#e57373"
        android:text="@string/btn_reviewPost"
        android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnBackReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="#e57373"
        android:text="@string/back_to_reviews"
        android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>